added flex wrap

--- a/Index.html
+++ b/Index.html
@@ -28,6 +28,9 @@
       </a>
 
       <a href="#" class="pad salmon"></a>
+      <a href="#" class="pad salmon"></a>
+      <a href="#" class="pad salmon"></a>
+      <a href="#" class="pad salmon"></a>
     </div>
   </body>
 </html>
