change gradients, add dark background

--- a/Index.html
+++ b/Index.html
@@ -27,9 +27,9 @@
         Dungeon
       </a>
 
-      <a href="#" class="pad salmon"></a>
-      <a href="#" class="pad salmon"></a>
-      <a href="#" class="pad salmon"></a>
+      <a href="#" class="pad mellow"></a>
+      <a href="#" class="pad cool"></a>
+      <a href="#" class="pad moonlit"></a>
       <a href="#" class="pad salmon"></a>
     </div>
   </body>
