added text shadow and more sounds

--- a/Index.html
+++ b/Index.html
@@ -13,24 +13,18 @@
       Stop
     </a>
     <div class="container">
-      <a
-        class="pad mimosa"
-        href="syrinscape-fantasy:moods/YnJpbmRvbC10b3duOjpCdXN5IG1hcmtldCBkYXk/play/"
-      >
-        Busy Market Day
-      </a>
+      <a class="pad mimosa" href="syrinscape-fantasy:moods/YnJpbmRvbC10b3duOjpCdXN5IG1hcmtldCBkYXk/play/">Market</a>
 
-      <a
-        class="pad aqua"
-        href="syrinscape-fantasy:moods/ZHVuZ2Vvbi1kZXB0aHM6Ok11c2ljIChubyBkZWxheSk/play/"
-      >
-        Dungeon
-      </a>
+      <a class="pad aqua" href="syrinscape-fantasy:moods/ZHVuZ2Vvbi1kZXB0aHM6Ok11c2ljIChubyBkZWxheSk/play/">Dungeon</a>
 
-      <a href="#" class="pad mellow"></a>
-      <a href="#" class="pad cool"></a>
-      <a href="#" class="pad moonlit"></a>
-      <a href="#" class="pad salmon"></a>
+      <a href="syrinscape-fantasy:moods/Y3VzdG9tLW1vb2RzOjpUYXZlcm4/play/" class="pad mellow">Tavern</a>
+      <a href="syrinscape-fantasy:moods/Y3VzdG9tLW1vb2RzLWlpOjpmb3Jlc3Q/play/" class="pad cool">Forest</a>
+      <a href="syrinscape-fantasy:moods/Y3VzdG9tLW1vb2RzLWlpOjpEYXJrIEZvcmVzdA/play/" class="pad moonlit">Forest - Rain</a>
+      <a href="syrinscape-fantasy:moods/dGhlLWJpcmRzOjpGb3Jlc3QgcmVsYXhhdGlvbg/play/" class="pad salmon">Forest - Music</a>
+      <a href="syrinscape-fantasy:moods/YmF0dGxlLW9mLXdvbHZlbi1wYXNzLWZ1bGw6Ok1lbiBpbiBiYXR0bGU/play/" class="pad cool">Battle</a>
+      <a href="syrinscape-fantasy:moods/Y3VzdG9tLW1vb2RzLWlpOjpDb21iYXQ/play/" class="pad salmon">Combat</a>
+      <a href="syrinscape-fantasy:moods/YmF0dGxlLW9mLXdvbHZlbi1wYXNzLWZ1bGw6OlRoZSBob3JkZSBtYXJjaGVz/play/" class="pad aqua">The Horde</a>
+      <a href="syrinscape-fantasy:moods/d2Fnb24tam91cm5leS1oaWdobGFuZHM6OkNhbXBpbmc/play/" class="pad mellow">Camp</a>
     </div>
   </body>
 </html>
