add news sounds

--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 
       <a href="syrinscape-fantasy:moods/Y3VzdG9tLW1vb2RzOjpUYXZlcm4/play/" class="pad mellow">Tavern</a>
       <a href="syrinscape-fantasy:moods/Y3VzdG9tLW1vb2RzLWlpOjpmb3Jlc3Q/play/" class="pad cool">Forest</a>
-      <a href="syrinscape-fantasy:moods/Y3VzdG9tLW1vb2RzLWlpOjpEYXJrIEZvcmVzdA/play/" class="pad moonlit">Forest - Rain</a>
+      <a href="syrinscape-fantasy:moods/Y3VzdG9tLW1vb2RzLWlpOjpEYXJrIEZvcmVzdA/play/" class="pad mimosa">Forest - Rain</a>
       <a href="syrinscape-fantasy:moods/dGhlLWJpcmRzOjpGb3Jlc3QgcmVsYXhhdGlvbg/play/" class="pad salmon">Forest - Music</a>
       <a href="syrinscape-fantasy:moods/YmF0dGxlLW9mLXdvbHZlbi1wYXNzLWZ1bGw6Ok1lbiBpbiBiYXR0bGU/play/" class="pad cool">Battle</a>
       <a href="syrinscape-fantasy:moods/Y3VzdG9tLW1vb2RzLWlpOjpDb21iYXQ/play/" class="pad salmon">Combat</a>
